<resources>
    <string name="app_name">Accessible Tuner App</string>
    <string name="initialHz">0 Hz</string>
    <string name="initialNote">#</string>
    <string name="info">Información</string>
    <string name="options">Ajustes</string>
    <string name="home">Inicio</string>
    <string name="homeDescription">Accediendo al afinador</string>
    <string name="homeTxt">Inicio</string>
    <string name="information">Información</string>
    <string name="informationTxt">Info</string>
    <string name="optionsDescription">Accediendo a los instrumentos</string>
    <string name="optionsTxt">Ajustes</string>
    <string name="select_instrument">Seleccione un intrumento:</string>
    <string name="select_intrument_description">Seleccione un instrumento de los que se encuentran más abajo</string>
    <string name="bombardino">Bombardino</string>
    <string name="clarinete">Clarinete</string>
    <string name="saxofon">Saxofón</string>
    <string name="bombardino_description">bombardino</string>
    <string name="clarinete_description">clarinete</string>
    <string name="saxofon_description">saxofón</string>
    <string name="activity_running">shortcut activity running</string>
    <string name="am_click_seleccionar">Realice una pulsación larga para seleccionar</string>
    <string name="am_click_afinar">Haz click aquí para empezar a afinar</string>
    <string name="am_click_instrumentos">Haz click para seleccionar tu instrumento</string>
    <string name="not_sound">Sin sonido</string>
    <string name="homeTooltip">Inicio. Realice una pulsación larga para acceder</string>
    <string name="informationDescription">Accediendo a información</string>
    <string name="informationTooltip">Información. Realice una pulsación larga para acceder</string>
    <string name="optionsTooltip">Ajustes. Realice una pulsación larga para acceder</string>
    <string name="saxofon_tooltip">Afinando para saxofón</string>
    <string name="bombardino_tooltip">Afinando para bombardino</string>
    <string name="clarinete_tooltip">Afinando para clarinete</string>
    <string name="select_instrument_tooltip">Seleccione uno de los siguientes instrumentos</string>
    <string name="am_selected_instrument">Afinando para</string>
    <string name="microphone_not_allowed">No se pudo inicializar el micrófono</string>
    <string name="cargando">Cargando…</string>
    <string name="infoContent">Aplicación desarrollada por José María Sanz Parrilla como trabajo final de Grado de Ingeniería Informática para la Universidad Interacional de la Rioja</string>
    <string name="turnVolumeUp">Por favor, suba el volumen. La aplicación proporciona apoyo auditivo durante la afinación</string>
    <string name="Instrument_in_tune">Afinación correcta</string>
    <string name="very">" muy"</string>
    <string name="a_bit">" un poco"</string>
    <string name="high">" alta."</string>
    <string name="low">" baja."</string>
    <string name="tuning_on">"Afinando en "</string>
    <string name="instrument_is_on_tune">El instrumento está correctamente afinado</string>
    <string name="tune">Afinación</string>
    <string name="nota_si">Si</string>
    <string name="nota_do">Do</string>
    <string name="nota_do_sostenido">Do#</string>
    <string name="nota_re">Re</string>
    <string name="nota_re_sostenido">Re#</string>
    <string name="nota_mi">Mi</string>
    <string name="nota_fa">Fa</string>
    <string name="nota_fa_sostenido">Fa#</string>
    <string name="nota_sol">Sol</string>
    <string name="nota_sol_sostenido">Sol#</string>
    <string name="nota_la">La</string>
    <string name="nota_la_sostenido">La#</string>
    <string name="continuar">Continuar</string>
</resources>