<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/navigation"
    android:background="@color/white">

    <!-- Menu Item Inicio -->
    <LinearLayout
        android:id="@+id/homeButton"
        android:contentDescription="@string/homeDescription"
        android:tooltipText="@string/homeTooltip"
        android:tag="@string/homeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/home"
            android:contentDescription="@string/homeDescription"
            android:tag="@string/homeDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeTxt"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/homeDescription"
            android:tag="@string/homeDescription"/>
    </LinearLayout>

    <!-- Menu Item Inicio -->
    <LinearLayout
        android:id="@+id/infoButton"
        android:contentDescription="@string/informationDescription"
        android:tooltipText="@string/informationTooltip"
        android:tag="@string/information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/info"
            android:contentDescription="@string/information" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informationTxt"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Menu Item Opciones -->
    <LinearLayout
        android:id="@+id/optionsButton"
        android:contentDescription="@string/optionsDescription"
        android:tooltipText="@string/optionsTooltip"
        android:tag="@string/optionsDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/opciones"
            android:contentDescription="@string/optionsDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionsTxt"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

</LinearLayout>
