<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/instruments_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:id="@+id/selectInstrument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:padding="20dp"
        android:gravity="center"
        android:tooltipText="@string/select_instrument_tooltip"
        android:contentDescription="@string/select_intrument_description"
        android:text="@string/select_instrument"
        android:background="@color/blue">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:tag="Recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>